Search Statements now represented correctly, more or less